--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@maptiler/geocoding-control": "^0.0.99",
+    "@maptiler/sdk": "^1.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,12 +14,14 @@
     "@types/react-dom": "^18.2.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.269.0",
+    "maplibre-gl": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-tiny-popover": "^7.2.4",
     "react-toastify": "^9.1.3",
     "swiper": "^10.2.0",
     "web-vitals": "^2.1.4"
